Fix spacing of dashboard and change icon colours to white

--- a/style.css
+++ b/style.css
@@ -29,8 +29,10 @@ p, h1, h2, h3, h4, h5 {
     height: 60%;
     width: 100%;
     display: grid;
+    gap: 10px;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr repeat(10,0.5fr);
+    margin-top: 15px;
 }
 
 #header {
